--- a/Backend/Ejs/package.json
+++ b/Backend/Ejs/package.json
@@ -6,11 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Meet Nakrani",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.21.2"
-  }
+  "description": ""
 }
