--- a/Backend/Rest Project /package.json
+++ b/Backend/Rest Project /package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-project-",
+  "name": "y",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,11 +8,12 @@
   "keywords": [],
   "author": "Meet nakrani",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "method-override": "^3.0.0",
     "uuid": "^11.0.3"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
